# this-week-in-rust-search

./: .env.sample  .gitignore  Cargo.toml  Procfile  RustConfig  build.rs  package.json  readme.md
config/: paths.js  webpack.config.js
js/: App.css  App.js  SearchBox.js  SearchResults.js
rs/: fetch.rs  links.rs  logger.rs  main.rs  server.rs
scripts/: start.js
src/: fetch.rs  fs_adapter.rs  links.rs  main.rs  server.rs  temp_adapter.rs
