[package]
name = "this-week-in-rust-search"
version = "0.1.0"
authors = ["Petr Kosikhin <petr.kosikhin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.7.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.106", features = ["derive"] }
futures = "0.3.4"
base64 = "0.12.0"
